Fix java 19 support