@@ -30,18 +30,13 @@ compileJava {
     options.compilerArgs.addAll(['--add-modules', 'jdk.incubator.concurrent'])
 }
 
-application {
-    applicationDefaultJvmArgs = ['--enable-preview', 
-                                 '--add-modules', 'jdk.incubator.concurrent']
-}
-
 repositories {
 	mavenLocal()
 	mavenCentral()
 }
 
 group 'rs.darkan'
-version '1.1.14'
+version '1.1.15'
 
 dependencies {
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
